--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,15 +43,22 @@ body {
     border: none;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 5px 10px;
+    padding: 5px 15px;
     border-radius: 5px;
 }
 
 .inputs-container input {
-    border: 1.5px solid rgba(255, 166, 0, 0.849);
+    border: 2px solid rgba(197, 197, 197, 0.849);
     border-radius: 5px;
-    padding: 5px;
+    padding: 7px;
 }
+
+.inputs-container input:focus {
+    border: 2px solid rgba(255, 166, 0, 0.849);
+    outline: none;
+ 
+}
+
 
 .message-content {
     max-width: 450px;
@@ -74,6 +81,7 @@ body {
     margin: 0;
     font-weight: 600;
     color: rgb(202, 99, 14);
+    word-break: break-all;
 }
 
 .message :nth-child(2) {
