--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,7 +36,8 @@ body {
 .loginchat-container input {
     margin-right: 5px;
     border: none;
-    padding: 3px;
+    padding: 4px;
+    border-radius: 2px;
 }
 
 .loginchat-container button {
@@ -45,7 +46,7 @@ body {
     background-color: rgb(113, 97, 255);
     color: orange;
     padding: 3px;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.267);
+    box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.267);
     background-color: rgb(255, 243, 220);
     font-weight: 600;
     font-size: 15px;
@@ -56,7 +57,7 @@ body {
     max-width: 450px;
     margin-top: 4em;
     display: flex;
-    gap: 1em;
+    gap: 5px;
     flex-direction: row-reverse;
     /*  border: 2px solid red; */
 }
